Fix report building

--- a/tasks/reports/templates/user_report.html
+++ b/tasks/reports/templates/user_report.html
@@ -6,13 +6,13 @@
     <body>
         <h1>Report</h1>
         <div id="time_total">
-            <embed type="image/svg+xml" src="{{ time_total|safe }}" />
+            <embed type="image/svg+xml" src={{ time_total|safe }} />
         </div>
         <div id="time_per_calendar">
-            <embed type="image/svg+xml" src="{{ time_per_calendar|safe }}" />
+            <embed type="image/svg+xml" src={{ time_per_calendar|safe }} />
         </div>
         <div id="percent_per_calendar">
-            <embed type="image/svg+xml" src="{{ percent_per_calendar|safe }}" />
+            <embed type="image/svg+xml" src={{ percent_per_calendar|safe }} />
         </div>
     </body>
 </html>
